k8s-manifests/services/catalog-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
  namespace: default
spec:
  type: ExternalName
  externalName: project-rds.c8pa4q6a42qa.us-east-1.rds.amazonaws.com
  ports:
    - port: 3306
      protocol: TCP
