k8s-manifests/services/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: default
  labels:
    app: catalog
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
